<resources>
    <string name="app_name">Tadhkirati Validator</string>
    <string name="profile_details_string">Profile Details</string>
    <string name="first_name_string">First name</string>
    <string name="last_name_string">Last name</string>
    <string name="phone_number_string">Phone number</string>
    <string name="profile_picture_string">Profile Picture</string>
    <string name="upload_image_string">Upload Image</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="required_string">Required</string>
    <string name="edit_password_string">Edit Password</string>
    <string name="current_password_string">Current password</string>
    <string name="new_password_string">New password</string>
    <string name="confirm_new_password_string">Confirm new password</string>
    <string name="submit_text">Submit</string>
    <string name="profile_string">Profile</string>
    <string name="tadhkirati_string">Tadhkirati</string>
    <string name="my_travels_string">My Travels</string>
    <string name="passenger_name_colon_string">Passenger name:</string>
    <string name="passenger_name_string">Passenger name</string>
    <string name="boarding_station_string">Boarding station:</string>
    <string name="landing_station_string">Landing station:</string>
    <string name="validate_string">Validate</string>
    <string name="travel_class_string">Travel class:</string>
    <string name="Validated_string">Validated:</string>
    <string name="payment_method_string">Payment method:</string>
    <string name="price_string">Price:</string>
    <string name="welcome_to_string">Welcome to</string>
    <string name="show_validated_string">Show validated</string>
    <string name="show_non_validated_string">Show non-validated</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="qr_code_scanner_string">QR Code Scanner</string>
    <string name="boarding_string">Boarding</string>
    <string name="password_string">Password</string>
    <string name="string_login">Login</string>
    <string name="validate_your_credentials_string">Make sure that the password is valid</string>
    <string name="string_update_user_error">There has been an error while trying to update user information</string>
    <string name="scan_instruction_string">Scan the ticket QR Code for a fast validation</string>
    <string name="departure_string">Departure</string>
    <string name="arrival_string">Arrival</string>
    <string name="status_string">Status</string>
    <string name="pending_string">Pending</string>
    <string name="departure_station_string">Departure station</string>
    <string name="arrival_station_string">Arrival station</string>
    <string name="departure_time_string">Departure time</string>
    <string name="arrival_time_string">Arrival time</string>
    <string name="duration_string">Duration</string>
    <string name="distance_string">Distance</string>
    <string name="load_tickets_string">Load Tickets</string>
    <string name="welcome_validator_string">Welcome back validator</string>
    <string name="fill_in_the_form_string">Fill in the form in order to login</string>
    <string name="to_your_validator_account_string">to your validator account.</string>
    <string name="string_connectivity_error">Connectivity error</string>
    <string name="string_loading_error">Loading Error</string>
    <string name="underway_string">Underway</string>
    <string name="completed_string">Completed</string>
    <string name="none_string" />
    <string name="first_class_limit_places_string">First class places limit</string>
    <string name="second_class_limit_places">"Second class places limit"</string>
    <string name="second_class_limit_places_string">"Second class limit places"</string>
    <string name="a_revolution_in_train_string">A revolution in train</string>
    <string name="services_string">services</string>
    <string name="cannot_show_code_scanner_string">Cannot show code scanner</string>
    <string name="retry_string">Retry</string>
    <string name="today_travels_string">Today Travels</string>
    <string name="ticket_validated_successfully_string">Ticket validated successfully</string>
    <string name="ticket_not_validated_string">Ticket could not be validated</string>
    <string name="travel_details_string">Travel Details</string>
    <string name="ticket_validated_for_string">"Ticket validated successfully for "</string>
    <string name="password_updated_successfully_string">Password updated successfully</string>
    <string name="password_update_failure_string">Password update failed</string>
    <string name="user_profile_update_error">Could not update the user profile</string>
    <string name="user_profile_updated_successfully_string">"User profile updated successfully "</string>
    <string name="first_name_length_range_string">First name should be between 4 and 10 characters long</string>
    <string name="last_name_length_range_string">Last name should be between 4 and 10 characters long</string>
    <string name="first_name_required_string">First name required</string>
    <string name="last_name_required_string">Last name is required</string>
    <string name="first_name_alphabetic_only_string">First name should contain alphabetic characters only</string>
    <string name="last_name_alphabetic_only_string">"Last name should contain alphabetic characters only "</string>
    <string name="phone_number_numeric_only_string">Phone number should contain numerical characters only</string>
    <string name="phone_number_required_string">Phone number is required</string>
    <string name="verify_entered_profile_information_string">Make sure that the entered profile information is valid</string>
    <string name="password_length_range_string">Password should be at least 8 characters long</string>
    <string name="new_password_mismatch_string">The password confirmation should match the new entered password</string>
    <string name="update_password_invalid_string">"Make sure that the entered passwords are valid "</string>
    <string name="ticket_details_for">"Ticket Details for "</string>
    <string name="ticket_details_string">Ticket Details</string>
</resources>