<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_profile_details"
    style="@style/ValidatorCardViewComponentStyle"
    app:cardCornerRadius="15dp">

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/ProfileComponentRootViewStyle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/ProfileSectionHeaderImageViewStyle"
                android:layout_width="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_edit_password" />

            <TextView
                style="@style/ProfileSectionTitleTextViewStyle"
                android:text="@string/edit_password_string" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View style="@style/ValidatorVerticalDividerViewStyle" />


        <TextView
            style="@style/ProfilePropertyNameTextViewStyle"
            android:text="@string/current_password_string" />

        <EditText
            android:id="@+id/edit_text_current_password"
            style="@style/ProfilePropertyValueEditTextStyle"
            android:hint="@string/current_password_string"
            android:inputType="textPassword" />

        <TextView
            android:visibility="gone"
            android:id="@+id/text_view_current_password_required"
            style="@style/ProfilePropertyRequiredTextViewStyle"
            android:text="@string/required_string" />

        <TextView
            style="@style/ProfilePropertyNameTextViewStyle"
            android:text="@string/new_password_string" />

        <EditText
            android:id="@+id/edit_text_new_password"
            style="@style/ProfilePropertyValueEditTextStyle"
            android:hint="@string/new_password_string"
            android:inputType="textPassword" />

        <TextView
            android:visibility="gone"
            android:id="@+id/text_view_new_password_required"
            style="@style/ProfilePropertyRequiredTextViewStyle"
            android:text="@string/required_string" />

        <TextView
            style="@style/ProfilePropertyNameTextViewStyle"
            android:text="@string/confirm_new_password_string" />

        <EditText
            android:id="@+id/edit_text_confirm_new_password"
            style="@style/ProfilePropertyValueEditTextStyle"
            android:hint="@string/confirm_new_password_string"
            android:inputType="textPassword" />

        <TextView
            android:visibility="gone"
            android:id="@+id/text_view_confirm_new_password_required"
            style="@style/ProfilePropertyRequiredTextViewStyle"
            android:text="@string/required_string" />

        <View style="@style/ValidatorVerticalDividerViewStyle" />

        <Button
            android:id="@+id/button_submit_edit_password"
            style="@style/ProfileActionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/submit_text"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>